--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ $JS2CA-5-rgba: rgba(94, 94, 94, 1);
 	color: rgba(140, 140, 140, 1);
 }
 .JS2CA-5-rgba {
-	color: rgba(94, 94, 94, 1);
+	color: rgba(0, 0, 0, .8);
 }
 
 * {
@@ -38,7 +38,7 @@ body {
 body {
 	font-family: "Inconsolata", monospace;
 	font-weight: 400;
-	color: rgba(94, 94, 94, 1);
+	color: rgba(0, 0, 0, .8);
 	background: url(../images/old-wall-background_1500x968.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -50,16 +50,21 @@ h3 {
 	margin-bottom: 2rem;
 }
 h1 {
-	color: rgb(113, 223, 113,1);
-	background-color: rgba(242, 242, 242, 0.7);
+	color: rgb(1, 148, 1);
+	background-color: rgba(242, 242, 242, 1);
 	padding: 0.25rem 5rem;
 	margin-top: 2rem;
-	text-shadow: -2px 2px 3px rgba(94, 94, 94, 1);
+	text-shadow: -1px 1px 1px rgba(94, 94, 94, 1);
 }
 
-active {
-	color: rgb(113, 223, 113,1);
-	text-shadow: -2px 1px 3px rgba(94, 94, 94, 1);
+a.nav-link{
+	color: rgba(0, 0, 0, .8) !important;
+}
+
+a.nav-link.active,
+a.nav-link:hover  {
+	color: rgb(1, 148, 1) !important;
+	text-shadow: -1px 1px 1px rgba(94, 94, 94, 1);
 }
 .underline {
 	text-decoration: underline;
@@ -72,6 +77,7 @@ span {
 .navbar {
 	font-family: "Lato", sans-serif;
 	padding: 0 2rem;
+	
 }
 
 .fa-star {
@@ -86,7 +92,7 @@ span {
 }
 
 .far {
-	color: rgb(113, 223, 113,.7);
+	color: rgb(1, 148, 1);
 }
 
 .favorite {
@@ -102,7 +108,7 @@ span {
 }
 
 .articles-search {
-	background-color: rgb(113, 223, 113,.7);
+	background-color: rgb(113, 223, 113,.9);
 	padding: 0.3rem 1rem;
 	width: 70%;
 	color: rgb(0, 0, 0, 0.9);
@@ -113,11 +119,6 @@ span {
 	width: 100%;
 	margin: 0 auto 3rem;
 	text-align: center;
-}
-#search-title {
-	padding: .3rem 0;
-	font-size: 1.2rem;
-	text-shadow: 3px 3px 6px rgba(242, 242, 242, 1);
 }
 
 .container {
